# lc2mcp

./: .gitignore  LICENSE  README.md  lc2mcp.db  pyproject.toml
.cursor/: mcp.json
.github/workflows/: ci.yml
examples/: advanced_context.py  basic_weather.py  community_tools.py  name_prefix.py
src/lc2mcp/: __init__.py  adapter.py  context.py  naming.py  schema.py  types.py
src/lc2mcp_community/: __init__.py  context.py
src/lc2mcp_community/resources/: __init__.py  user_profile.py
src/lc2mcp_community/tools/: __init__.py  image_gen.py  user_info.py  web_search.py
src/lc2mcp_scanner/: __init__.py  scanner.py
src/lc2mcp_server/: __init__.py  auth.py  chat.py  config.py  config.yaml  context.py  database.py  main.py  models.py  oauth_provider.py  routes.py
src/lc2mcp_server/static/: style.css
src/lc2mcp_server/templates/: base.html  chat.html  dashboard.html  login.html
tests/: __init__.py  test_adapter.py  test_context.py  test_integration.py  test_issue_2.py  test_naming.py  test_schema.py
